[workspace]
resolver = "2"
members = [ "buffer" 
,"mime" 
,"oneone" 
,"protocol_traits"
,"zxc"
,"zxc-derive"
]

[workspace.dependencies]
bytes = "*"
criterion = "*"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
thiserror = { version = "2.0.12" }
tracing = { version = "0.1.41"}

# [profile.release]
# lto = true
# codegen-units = 1
# panic = "abort"
