[package]
name = "mime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
serde = { workspace = true }

[build-dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = {workspace = true}

[[bench]]
name = "mybench"
harness = false
