[package]
name = "oneone"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "7.0.0"
flate2 = "1.1.0"
zstd = "0.13.3"
buffer = { path = "../buffer" }
bytes = { workspace = true }
mime = { path = "../mime" }
protocol_traits = { path = "../protocol_traits" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
