[package]
name = "zxc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
buffer = { path = "../buffer" }
mime = { path = "../mime" }
oneone = { path = "../oneone" }
protocol_traits = { path = "../protocol_traits" }
zxc-derive = { path = "../zxc-derive" }

# workspace
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# crates
clap = { version = "4.5.34" , features = ["derive"] }
time = { version = "0.3.41", features = ["formatting"] }
toml = "0.8.20"
tracing-subscriber = { version = "0.3.19", features = ["local-time", "env-filter"] }
base64 = "0.22.1"
chrono = "0.4.40"
form_urlencoded = "1.2.1"
futures-util = "0.3.31"
http = "1.3.1"
openssl = { version = "0.10.71", features = ["vendored"] }
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"
tokio = { version = "1.44.1", features = ["full", "tracing"] }
tokio-rustls = { version = "0.26.2"}
tokio-tungstenite = "0.26.2"
tokio-util = { version = "0.7.14", features = ["rt"] }
webpki-roots = "0.26.8"
wildcard = "0.3.0"
xattr = "1.5.0"

# console-subscriber = "0.4.0"
